--- a/docs/README
+++ b/docs/README
@@ -292,7 +292,8 @@ bug reports, or patches from:
   - Padraig Brady,
   - Ben Laurie,
   - @dronesec,
-  - Luca Barbato.
+  - Luca Barbato,
+  - Tobias Ospelt.
 
 Thank you!
 
