--- a/docs/README
+++ b/docs/README
@@ -319,7 +319,8 @@ bug reports, or patches from:
   - @dronesec,
   - Luca Barbato,
   - Tobias Ospelt,
-  - Thomas Jarosch.
+  - Thomas Jarosch,
+  - Martin Carpenter.
 
 Thank you!
 
