--- a/docs/README
+++ b/docs/README
@@ -320,7 +320,8 @@ bug reports, or patches from:
   - Luca Barbato,
   - Tobias Ospelt,
   - Thomas Jarosch,
-  - Martin Carpenter.
+  - Martin Carpenter,
+  - Mudge Zatko.
 
 Thank you!
 
