--- a/docs/README
+++ b/docs/README
@@ -378,7 +378,9 @@ bug reports, or patches from:
   - Mudge Zatko,
   - Joe Zbiciak,
   - Ryan Govostes,
-  - Michael Rash.
+  - Michael Rash,
+  - William Robinet,
+  - Jonathan Gray.
 
 Thank you!
 
