--- a/docs/README
+++ b/docs/README
@@ -421,7 +421,8 @@ bug reports, or patches from:
   - William Robinet,
   - Jonathan Gray,
   - Filipe Cabecinhas,
-  - Nico Weber.
+  - Nico Weber,
+  - Jodie Cunningham.
 
 Thank you!
 
