--- a/docs/README
+++ b/docs/README
@@ -460,7 +460,8 @@ bug reports, or patches from:
   - Nico Weber,
   - Jodie Cunningham,
   - Andrew Griffiths,
-  - Parker Thompson.
+  - Parker Thompson,
+  - Jonathan Neuschfer.
 
 Thank you!
 
