--- a/docs/README
+++ b/docs/README
@@ -461,7 +461,8 @@ bug reports, or patches from:
   - Jodie Cunningham,
   - Andrew Griffiths,
   - Parker Thompson,
-  - Jonathan Neuschfer.
+  - Jonathan Neuschfer,
+  - Tyler Nighswander.
 
 Thank you!
 
