--- a/docs/README
+++ b/docs/README
@@ -433,7 +433,7 @@ bug reports, or patches from:
   Nico Weber                            Jodie Cunningham
   Andrew Griffiths                      Parker Thompson
   Jonathan Neuschfer                    Tyler Nighswander
-  Ben Nagy
+  Ben Nagy                              Samir Aguiar
 
 Thank you!
 
