--- a/docs/README
+++ b/docs/README
@@ -434,6 +434,8 @@ bug reports, or patches from:
   Andrew Griffiths                      Parker Thompson
   Jonathan Neuschfer                    Tyler Nighswander
   Ben Nagy                              Samir Aguiar
+  Aidan Thornton                        Aleksandar Nikolich
+  Sam Hakim
 
 Thank you!
 
