afl-1.81b.tgz (11-Jun-2015 09:25; md5: bef67af9f9df3fb7595a228ae7b7eea0)
Change summary from http://lcamtuf.coredump.cx/afl/ChangeLog.txt:

--------------
Version 1.81b:
--------------

  - Added persistent mode for in-process fuzzing. See llvm_mode/README.llvm.
    Inspired by Kostya Serebryany and Christian Holler.

  - Changed the in-place resume code to preserve crashes/README.txt. Suggested
    by Ben Nagy.

  - Included a potential fix for LLVM mode issues on MacOS X, based on the
    investigation done by teor2345.

--- a/docs/ChangeLog
+++ b/docs/ChangeLog
@@ -17,6 +17,19 @@ is 1.76b. If you're stuck on an earlier release, it's strongly advisable
 to get on with the times.
 
 --------------
+Version 1.81b:
+--------------
+
+  - Added persistent mode for in-process fuzzing. See llvm_mode/README.llvm.
+    Inspired by Kostya Serebryany and Christian Holler.
+
+  - Changed the in-place resume code to preserve crashes/README.txt. Suggested
+    by Ben Nagy.
+
+  - Included a potential fix for LLVM mode issues on MacOS X, based on the
+    investigation done by teor2345.
+
+--------------
 Version 1.80b:
 --------------
 
