afl-1.84b.tgz (27-Jul-2015 07:35; md5: 17c9d65c3af14bae9cdd28c5b2726689)
Change summary from http://lcamtuf.coredump.cx/afl/ChangeLog.txt:

--------------
Version 1.84b:
--------------

  - Made SIMPLE_FILES behave as expected when naming backup directories for
    crashes and hangs.

  - Added the total number of favored paths to fuzzer_stats. Requested by
    Ben Nagy.

  - Made afl-tmin, afl-fuzz, and afl-cmin reject negative values passed to
    -t and -m, since they generally won't work as expected.

  - Made a fix for no lahf / sahf support on older versions of FreeBSD.
    Patch contributed by Alex Moneger.

--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -94,6 +94,10 @@ and definitely don't look POSIX-compliant. This means two things:
 User emulation mode of QEMU does not appear to be supported on MacOS X, so
 black-box instrumentation mode (-Q) will not work.
 
+The llvm_mode requires a fully-operational installation of clang. The one that
+comes with Xcode is missing some of the essential headers and helper tools.
+See llvm_mode/README.llvm for advice on how to build the compiler from scratch.
+
 4) Linux or *BSD on non-x86 systems
 -----------------------------------
 
