--- a/docs/README
+++ b/docs/README
@@ -443,7 +443,7 @@ bug reports, or patches from:
   Alex Moneger                          Dmitry Vyukov
   Keegan McAllister                     Kostya Serebryany
   Richo Healey                          Martijn Bogaard
-  rc0r
+  rc0r                                  Jonathan Foote
 
 Thank you!
 
