--- a/docs/README
+++ b/docs/README
@@ -440,7 +440,7 @@ bug reports, or patches from:
   Richo Healey                          Martijn Bogaard
   rc0r                                  Jonathan Foote
   Christian Holler                      Dominique Pelle
-  Jacek Wielemborek
+  Jacek Wielemborek                     Leo Barnes
 
 Thank you!
 
