--- a/docs/README
+++ b/docs/README
@@ -441,6 +441,7 @@ bug reports, or patches from:
   rc0r                                  Jonathan Foote
   Christian Holler                      Dominique Pelle
   Jacek Wielemborek                     Leo Barnes
+  Jeremy Barnes
 
 Thank you!
 
