--- a/docs/README
+++ b/docs/README
@@ -451,6 +451,7 @@ bug reports, or patches from:
   Jeremy Barnes                         Jeff Trull
   Guillaume Endignoux                   ilovezfs
   Daniel Godas-Lopez                    Franjo Ivancic
+  Austin Seipp                          Daniel Komaromy
 
 Thank you!
 
