--- a/docs/README
+++ b/docs/README
@@ -481,6 +481,7 @@ bug reports, or patches from:
   Daniel Godas-Lopez                    Franjo Ivancic
   Austin Seipp                          Daniel Komaromy
   Daniel Binderman                      Jonathan Metzman
+  Vegard Nossum
 
 Thank you!
 
