--- a/docs/README
+++ b/docs/README
@@ -482,6 +482,7 @@ bug reports, or patches from:
   Austin Seipp                          Daniel Komaromy
   Daniel Binderman                      Jonathan Metzman
   Vegard Nossum                         Jan Kneschke
+  Kurt Roeckx
 
 Thank you!
 
